Change music bot title in index.html
Updated the title from 'Sopanam Music Bot' to 'Melomi Music Bot'.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
     <div class="content">
         <h1>nis</h1>
-        <h2>Sopanam Music Bot</h2>
+        <h2>Melomi Music Bot</h2>
     </div>
     <div class="hacking-theme">
         <div style="left: 10%;"></div>
@@ -106,4 +106,5 @@
     </div>
 </body>
 </html>
+
 
